tests/build/cases/property/child_type_is_not_ui_node.stderr
error[E0277]: the trait bound `NotUiNode: UiNode` is not satisfied
 --> cases/property/child_type_is_not_ui_node.rs:6:29
  |
6 | pub fn invalid_child(child: NotUiNode, input: bool) -> impl UiNode {
  |                             ^^^^^^^^^ the trait `UiNode` is not implemented for `NotUiNode`

error[E0308]: mismatched types
 --> cases/property/child_type_is_not_ui_node.rs:6:29
  |
6 | pub fn invalid_child(child: NotUiNode, input: bool) -> impl UiNode {
  |                             ^^^^^^^^^                  ---- the found opaque type
  |                             |
  |                             expected struct `NotUiNode`, found opaque type
  |
  = note:   expected struct `NotUiNode`
          found opaque type `impl UiNode`
